--- a/QLLH.Web/ClientApp/package.json
+++ b/QLLH.Web/ClientApp/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
